# Chess

./: .gitignore  CMakeLists.txt
src/cmake/: add_glsl_shader.cmake  conan.cmake  copy_compile_commands.cmake
src/executable/: CMakeLists.txt  main.cpp
src/renderer/: CMakeLists.txt  family_indeces.cpp  family_indeces.hpp  render_system.cpp  render_system.hpp
src/utils/: CMakeLists.txt  assert.cpp  assert.hpp  executable_folder.cpp  executable_folder.hpp
third_party_recipes/vkfw/: conanfile.py
